--- a/.build/.gitlab-ci.yml
+++ b/.build/.gitlab-ci.yml
@@ -11,9 +11,7 @@ include:
 #    - when: always # Run all other pipeline types, or replace with specific workflow rule
 
 stages:
-  - devops-build
-  - build
-  - deploy
+  - split-packages
 
 cache:
   # each branch always use the same cache
@@ -31,73 +29,39 @@ variables:
   COMPOSER_CACHE_DIR: "$CI_PROJECT_DIR/.cache/composer"
   SURF_WORKSPACE: "$CI_PROJECT_DIR/.caches/surf_workspace"
 
-build:deploy-container:
-  extends: .build-container:template
+split:packages:
+  image:
+    name: symplify2/monorepo-split:latest
+    entrypoint: [ "/usr/bin/env" ]
+  stage: split-packages
+  parallel:
+    matrix:
+      -
+        LOCAL_PATH: "app/backend/packages/starter"
+        SPLIT_REPOSITORY: "starterteam/team/starter"
+      -
+        LOCAL_PATH: "app/backend/packages/starter_nessa"
+        SPLIT_REPOSITORY: "starterteam/team/starter-nessa"
+      -
+        LOCAL_PATH: "app/backend/packages/starter_sitepackage"
+        SPLIT_REPOSITORY: "starterteam/team/starter-sitepackage"
+      -
+        LOCAL_PATH: "app/backend/packages/starter_twig"
+        SPLIT_REPOSITORY: "starterteam/team/starter-twig"
   variables:
-    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:deploy
-    DOCKER_IMAGE_PATH: ./.build/docker/deploy/
-
-build:frontend-lint-container:
-  extends: .build-container:template
-  variables:
-    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:frontend
-    DOCKER_IMAGE_PATH: ./.build/docker/lint-frontend/
-
-build:backend-lint-container:
-  extends: .build-container:template
-  variables:
-    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:backend
-    DOCKER_IMAGE_PATH: ./.build/docker/lint-backend/
-
-build:frontend:
-  image: $CI_REGISTRY_IMAGE:frontend
-  stage: build
-  before_script:
-    - cd ./app/frontend
-    - npm ci --cache .cache/.npm --prefer-offline
+    GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+    PACKAGE_DIRECTORY: $LOCAL_PATH
+    REPOSITORY_ORGANIZATION: "team"
+    REPOSITORY_NAME: $SPLIT_REPOSITORY
+    BRANCH: "main"
+    TAG: ""
+    USER_NAME: $GITLAB_USER_NAME
+    USER_EMAIL: $GITLAB_USER_EMAIL
+    REPOSITORY_HOST: "gitlab.com"
   script:
-    - echo "Build frontend for $CI_COMMIT_SHA"
-    # compile JS and Scss
-    - npm run build:dev:backend
-  cache:
-    key: ${CI_COMMIT_REF_SLUG}
-  artifacts:
-    expire_in: 1h
-    paths:
-      - .cache/.npm/_logs
-      - app/frontend/build
+    - echo "Splitting $PACKAGE_DIRECTORY to $REPOSITORY_NAME"
+    - php /splitter/entrypoint.php
   rules:
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "staging"'
-      when: always
-
-deploy:staging:
-  extends: .deploy-app:template
-  dependencies:
-    - build:frontend
-  environment:
-    name: staging
-    url: http://staging.mirfulan.de
-  variables:
-    APP_CONTEXT: 'Production/Staging'
-    DEPLOYMENT_SOURCE: 'sha1:$CI_COMMIT_SHA'
-    DEPLOYMENT_KEEP_RELEASES: '1'
-    DEPLOYMENT_TASKS: 'fixAccessRightsTask,fixFolderStructureTask,copyFractalArtifactsTask,copyTwigDataToSitepackageTask'
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "staging"'
-      when: manual
-
-deploy:prod:
-  extends: .deploy-app:template
-  dependencies:
-    - build:frontend
-  environment:
-    name: production
-    url: https://mirfulan.de
-  variables:
-    APP_CONTEXT: 'Production'
-    DEPLOYMENT_SOURCE: 'sha1:$CI_COMMIT_SHA'
-    DEPLOYMENT_KEEP_RELEASES: '1'
-    DEPLOYMENT_TASKS: 'fixAccessRightsTask,fixFolderStructureTask,copyTwigDataToSitepackageTask'
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
-      when: manual
+    - if: $CI_COMMIT_BRANCH == "main"
+      allow_failure: false
+  interruptible: false
