[DEVOPS] Fix split repository values

--- a/.build/.gitlab-ci.yml
+++ b/.build/.gitlab-ci.yml
@@ -38,20 +38,20 @@ split:packages:
     matrix:
       -
         LOCAL_PATH: "app/backend/packages/starter"
-        SPLIT_REPOSITORY: "starterteam/team/starter"
+        SPLIT_REPOSITORY: "team/starter"
       -
         LOCAL_PATH: "app/backend/packages/starter_nessa"
-        SPLIT_REPOSITORY: "starterteam/team/starter-nessa"
+        SPLIT_REPOSITORY: "team/starter-nessa"
       -
         LOCAL_PATH: "app/backend/packages/starter_sitepackage"
-        SPLIT_REPOSITORY: "starterteam/team/starter-sitepackage"
+        SPLIT_REPOSITORY: "team/starter-sitepackage"
       -
         LOCAL_PATH: "app/backend/packages/starter_twig"
-        SPLIT_REPOSITORY: "starterteam/team/starter-twig"
+        SPLIT_REPOSITORY: "team/starter-twig"
   variables:
     GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
     PACKAGE_DIRECTORY: $LOCAL_PATH
-    REPOSITORY_ORGANIZATION: "team"
+    REPOSITORY_ORGANIZATION: "starterteam"
     REPOSITORY_NAME: $SPLIT_REPOSITORY
     BRANCH: "main"
     TAG: ""
