--- a/project-templates/app/backend/.gitignore
+++ b/project-templates/app/backend/.gitignore
@@ -16,15 +16,11 @@ Thumbs.db
 /public/*
 !/public/.htaccess
 !/public/typo3conf
+/public/typo3conf/*
 !/public/typo3conf/.gitignore
 !/public/typo3conf/LocalConfiguration.php
 !/public/typo3conf/AdditionalConfiguration.php
 !/public/typo3conf/PackageStates.php
-
-/public/typo3conf/ext/*
-!/public/typo3conf/ext/customer_sitepackage
-!/public/typo3conf/ext/sitepackage_nessa
-!/public/typo3conf/ext/starter*
 
 /vendor
 /var/*
