--- a/.build/.gitlab-ci.yml
+++ b/.build/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 include:
   - local: '/.build/ci/templates/deployTemplate.yml'
   - local: '/.build/ci/templates/containerTemplate.yml'
+  - local: '/.build/ci/templates/monorepoSplitTemplate.yml'
   #- local: '/.build/ci/linting-backend.yml'
   #- local: '/.build/ci/linting-frontend.yml'
 
@@ -30,38 +31,23 @@ variables:
   SURF_WORKSPACE: "$CI_PROJECT_DIR/.caches/surf_workspace"
 
 split:packages:
-  image:
-    name: symplify2/monorepo-split:latest
-    entrypoint: [ "/usr/bin/env" ]
-  stage: split-packages
-  parallel:
-    matrix:
-      -
-        LOCAL_PATH: "app/backend/packages/starter"
-        SPLIT_REPOSITORY: "team/starter"
-      -
-        LOCAL_PATH: "app/backend/packages/starter_nessa"
-        SPLIT_REPOSITORY: "team/starter-nessa"
-      -
-        LOCAL_PATH: "app/backend/packages/starter_sitepackage"
-        SPLIT_REPOSITORY: "team/starter-sitepackage"
-      -
-        LOCAL_PATH: "app/backend/packages/starter_twig"
-        SPLIT_REPOSITORY: "team/starter-twig"
+  extends: .split-monorepo:template
   variables:
-    GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-    PACKAGE_DIRECTORY: $LOCAL_PATH
-    REPOSITORY_ORGANIZATION: "starterteam"
-    REPOSITORY_NAME: $SPLIT_REPOSITORY
-    BRANCH: "main"
     TAG: ""
-    USER_NAME: $GITLAB_USER_NAME
-    USER_EMAIL: $GITLAB_USER_EMAIL
-    REPOSITORY_HOST: "gitlab.com"
   script:
     - echo "Splitting $PACKAGE_DIRECTORY to $REPOSITORY_NAME"
     - php /splitter/entrypoint.php
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
       allow_failure: false
-  interruptible: false
+
+split:packages:tagged:
+  extends: .split-monorepo:template
+  variables:
+    TAG: $CI_COMMIT_TAG
+  script:
+    - echo "Splitting with tag ($TAG) $PACKAGE_DIRECTORY to $REPOSITORY_NAME"
+    - php /splitter/entrypoint.php
+  rules:
+    - if: $CI_COMMIT_TAG
+      allow_failure: false
