--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -55,7 +55,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symplify/monorepo-builder": "^9.4"
+        "symplify/monorepo-builder": "^9.4",
+        "typo3/coding-standards": "^0.5.0"
     },
     "autoload": {
         "psr-4": {
