--- a/project-templates/app/backend/composer.json
+++ b/project-templates/app/backend/composer.json
@@ -60,6 +60,9 @@
 		"typo3/cms-tstemplate": "^10.4",
 		"typo3/cms-viewpage": "^10.4"
 	},
+	"require-dev": {
+		"typo3/coding-standards": "^0.5.0"
+	},
 	"scripts": {
 		"post-install-cmd": [
 			"ln -sf vendor/helhum/typo3-console/typo3cms typo3cms"
