[TASK][CLEANUP] Fix code style with php-cs-fixer and TYPO3 coding standard

--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -97,6 +97,10 @@
             "ext-xmlwriter": "1",
             "ext-json": "1",
             "ext-gd": "1"
+        },
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
         }
     },
     "scripts": {
