--- a/.build/.gitlab-ci.yml
+++ b/.build/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 include:
   - local: '/.build/ci/templates/deployTemplate.yml'
-  - local: '/.build/ci/templates/containerTemplate.yml'
   - local: '/.build/ci/templates/monorepoSplitTemplate.yml'
-  #- local: '/.build/ci/linting-backend.yml'
+  - local: '/.build/ci/container-build.yml'
+  - local: '/.build/ci/linting-backend.yml'
   #- local: '/.build/ci/linting-frontend.yml'
 
 #workflow:
@@ -12,6 +12,8 @@ include:
 #    - when: always # Run all other pipeline types, or replace with specific workflow rule
 
 stages:
+  - devops-build
+  - backend-linting
   - split-packages
 
 cache:
