--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -55,6 +55,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.12.3",
         "symplify/monorepo-builder": "^9.4",
         "typo3/coding-standards": "^0.5.0"
     },
