--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "starterteam/customer-site-package",
     "type": "typo3-cms-extension",
-    "description": "",
+    "description": "StarterTeam basic sitepackage extension",
     "license": "proprietary",
     "require": {
         "php": "^7.4",
@@ -9,10 +9,10 @@
         "starterteam/starter": "^3.0",
         "starterteam/starter-sitepackage": "^3.0"
     },
-	"suggest": {
-		"starterteam/starter-twig": "^3.0",
-		"starterteam/starter-nessa": "^3.0"
-	},
+    "suggest": {
+        "starterteam/starter-twig": "^3.0",
+        "starterteam/starter-nessa": "^3.0"
+    },
     "extra": {
         "typo3/cms": {
             "extension-key": "customer_sitepackage"
