[TASK] Einheitlicher Codestyle in der .env.dist Datei

--- a/app/backend/.env.dist
+++ b/app/backend/.env.dist
@@ -36,9 +36,9 @@ TYPO3_GFX_PROCESSOR_COLORSPACE="sRGB"
 TYPO3_BASEURL_MAIN="https://starter-base.ddev.site/"
 #TYPO3_BASEURL_OTHER=""
 TYPO3_SYS_TRUSTED_HOST_PATTERN=".*\.ddev\.site"
-TYPO3_BE_COOKIEDOMAIN='.ddev.site'
+TYPO3_BE_COOKIEDOMAIN=".ddev.site"
 # Set this value from "true" to "0" if no SSL is available
 TYPO3_BE_LOCK_SSL=true
 TYPO3_SYS_PHP_TIME_ZONE="Europe/Berlin"
 TYPO3_SYS_SYSTEM_LOCALE="de_DE.utf-8"
-TYPO3_INSTALL_TOOL_PASSWORD='joh316'
+TYPO3_INSTALL_TOOL_PASSWORD="joh316"
