--- a/.build/ci/documentation.yml
+++ b/.build/ci/documentation.yml
@@ -11,27 +11,20 @@
 stages:
   - documentation
 
-install:
-  extends: .documentation
-  stage: documentation
-  script:
-    - composer install -d $DOC_FOLDER
-  artifacts:
-    paths:
-      - $VENDOR_FOLDER
-
 build:
   extends: .documentation
   stage: documentation
-  dependencies:
-    - install
-  needs: ["install"]
   script:
     - cd $DOC_FOLDER
-    - vendor/bin/daux generate
+    - composer install --no-progress
+    - vendor/bin/daux generate -q
   artifacts:
     paths:
       - $STATIC_FOLDER
+  cache:
+    key: doc-composer-cache
+    paths:
+      - $VENDOR_FOLDER
 
 pages:
   extends: .documentation
