--- a/app/backend/.gitignore
+++ b/app/backend/.gitignore
@@ -20,7 +20,7 @@ Thumbs.db
 !/public/typo3conf/.gitignore
 !/public/typo3conf/LocalConfiguration.php
 !/public/typo3conf/AdditionalConfiguration.php
-!/public/typo3conf/PackageStates.php
+/public/typo3conf/ENABLE_INSTALL_TOOL
 
 /public/typo3conf/ext/*
 !/public/typo3conf/ext/customer_sitepackage
@@ -28,5 +28,4 @@ Thumbs.db
 !/public/typo3conf/ext/starter*
 
 /vendor
-/var/*
-!/var/labels
+/var/
