--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -22,39 +22,41 @@
     "require": {
         "php": "^7.4",
         "helhum/dotenv-connector": "^3.0",
-        "helhum/typo3-console": "^6.4",
-        "ichhabrecht/content-defender": "^3.0",
-        "pti/pti": "dev-master",
+        "helhum/typo3-console": "^7.0",
+        "ichhabrecht/content-defender": "^3.2",
+        "pti/pti": "dev-feature/support_t3v11",
+        "symfony/dotenv": "^5.2",
         "twig/twig": "^3",
-        "typo3/cms-backend": "^10.4",
-        "typo3/cms-belog": "^10.4",
-        "typo3/cms-beuser": "^10.4",
-        "typo3/cms-core": "^10.4",
-        "typo3/cms-extbase": "^10.4",
-        "typo3/cms-extensionmanager": "^10.4",
-        "typo3/cms-filelist": "^10.4",
-        "typo3/cms-fluid": "^10.4",
-        "typo3/cms-fluid-styled-content": "^10.4",
-        "typo3/cms-form": "^10.4",
-        "typo3/cms-frontend": "^10.4",
-        "typo3/cms-impexp": "^10.4",
-        "typo3/cms-info": "^10.4",
-        "typo3/cms-install": "^10.4",
-        "typo3/cms-lowlevel": "^10.4",
-        "typo3/cms-recordlist": "^10.4",
-        "typo3/cms-redirects": "^10.4",
-        "typo3/cms-reports": "^10.4",
-        "typo3/cms-rte-ckeditor": "^10.4",
-        "typo3/cms-scheduler": "^10.4",
-        "typo3/cms-seo": "^10.4",
-        "typo3/cms-setup": "^10.4",
-        "typo3/cms-sys-note": "^10.4",
-        "typo3/cms-t3editor": "^10.4",
-        "typo3/cms-tstemplate": "^10.4",
-        "typo3/cms-viewpage": "^10.4"
+        "typo3/cms-backend": "^11.5",
+        "typo3/cms-belog": "^11.5",
+        "typo3/cms-beuser": "^11.5",
+        "typo3/cms-core": "^11.5",
+        "typo3/cms-extbase": "^11.5",
+        "typo3/cms-extensionmanager": "^11.5",
+        "typo3/cms-filelist": "^11.5",
+        "typo3/cms-fluid": "^11.5",
+        "typo3/cms-fluid-styled-content": "^11.5",
+        "typo3/cms-form": "^11.5",
+        "typo3/cms-frontend": "^11.5",
+        "typo3/cms-impexp": "^11.5",
+        "typo3/cms-info": "^11.5",
+        "typo3/cms-install": "^11.5",
+        "typo3/cms-lowlevel": "^11.5",
+        "typo3/cms-recordlist": "^11.5",
+        "typo3/cms-redirects": "^11.5",
+        "typo3/cms-reports": "^11.5",
+        "typo3/cms-rte-ckeditor": "^11.5",
+        "typo3/cms-scheduler": "^11.5",
+        "typo3/cms-seo": "^11.5",
+        "typo3/cms-setup": "^11.5",
+        "typo3/cms-sys-note": "^11.5",
+        "typo3/cms-t3editor": "^11.5",
+        "typo3/cms-tstemplate": "^11.5",
+        "typo3/cms-viewpage": "^11.5"
     },
     "require-dev": {
-        "rector/rector": "^0.12.3",
+        "michielroos/typo3scan": "^1.7",
+        "rector/rector": "^0.12.15",
         "symplify/monorepo-builder": "^10.0",
         "typo3/coding-standards": "^0.5.0"
     },
@@ -73,6 +75,10 @@
         {
             "type": "path",
             "url": "./packages/*"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/chriwo/typo3-pti.git"
         }
     ],
     "extra": {
@@ -92,7 +98,6 @@
         "optimize-autoloader": true,
         "sort-packages": true,
         "platform": {
-            "php": "7.4",
             "ext-dom": "1",
             "ext-intl": "1",
             "ext-simplexml": "1",
@@ -113,10 +118,10 @@
         ]
     },
     "replace": {
-        "starterteam/customer-site-package": "3.1.2",
-        "starterteam/site-package-nessa": "3.1.2",
-        "starterteam/starter": "3.1.2",
-        "starterteam/starter-nessa": "3.1.2",
-        "starterteam/starter-twig": "3.1.2"
+        "starterteam/customer-site-package": "self.version",
+        "starterteam/site-package-nessa": "self.version",
+        "starterteam/starter": "self.version",
+        "starterteam/starter-nessa": "self.version",
+        "starterteam/starter-twig": "self.version"
     }
 }
