--- a/app/backend/public/.htaccess
+++ b/app/backend/public/.htaccess
@@ -69,6 +69,7 @@ AddEncoding gzip .gzip
 			application/rss+xml \
 			application/schema+json \
 			application/vnd.geo+json \
+			application/geo+json \
 			application/vnd.ms-fontobject \
 			application/x-font-ttf \
 			application/x-javascript \
@@ -77,6 +78,8 @@ AddEncoding gzip .gzip
 			application/xml \
 			font/eot \
 			font/opentype \
+			font/otf \
+			font/ttf \
 			image/bmp \
 			image/svg+xml \
 			image/vnd.microsoft.icon \
@@ -117,6 +120,7 @@ AddEncoding gzip .gzip
 	ExpiresByType application/ld+json                   "access plus 0 seconds"
 	ExpiresByType application/schema+json               "access plus 0 seconds"
 	ExpiresByType application/vnd.geo+json              "access plus 0 seconds"
+	ExpiresByType application/geo+json                  "access plus 0 seconds"
 	ExpiresByType application/xml                       "access plus 0 seconds"
 	ExpiresByType text/xml                              "access plus 0 seconds"
 
@@ -136,9 +140,13 @@ AddEncoding gzip .gzip
 	ExpiresByType text/cache-manifest                   "access plus 0 seconds"
 
 	ExpiresByType audio/ogg                             "access plus 1 month"
+	ExpiresByType image/apng                            "access plus 1 month"
+	ExpiresByType image/avif                            "access plus 1 month"
+	ExpiresByType image/avif-sequence                   "access plus 1 month"
 	ExpiresByType image/bmp                             "access plus 1 month"
 	ExpiresByType image/gif                             "access plus 1 month"
 	ExpiresByType image/jpeg                            "access plus 1 month"
+	ExpiresByType image/jxl                             "access plus 1 month"
 	ExpiresByType image/png                             "access plus 1 month"
 	ExpiresByType image/svg+xml                         "access plus 1 month"
 	ExpiresByType image/webp                            "access plus 1 month"
@@ -150,14 +158,18 @@ AddEncoding gzip .gzip
 	ExpiresByType application/rdf+xml                   "access plus 1 hour"
 	ExpiresByType application/rss+xml                   "access plus 1 hour"
 
+	ExpiresByType font/collection                       "access plus 1 month"
 	ExpiresByType application/vnd.ms-fontobject         "access plus 1 month"
 	ExpiresByType font/eot                              "access plus 1 month"
 	ExpiresByType font/opentype                         "access plus 1 month"
+	ExpiresByType font/otf                              "access plus 1 month"
 	ExpiresByType application/x-font-ttf                "access plus 1 month"
+	ExpiresByType font/ttf                              "access plus 1 month"
 	ExpiresByType application/font-woff                 "access plus 1 month"
 	ExpiresByType application/x-font-woff               "access plus 1 month"
 	ExpiresByType font/woff                             "access plus 1 month"
 	ExpiresByType application/font-woff2                "access plus 1 month"
+	ExpiresByType font/woff2                            "access plus 1 month"
 
 	ExpiresByType text/x-cross-domain-policy            "access plus 1 week"
 
@@ -170,6 +182,16 @@ AddEncoding gzip .gzip
 
 # Proper MIME types for all files
 <IfModule mod_mime.c>
+	# Security configuration
+	RemoveType .html .htm
+	<FilesMatch ".+\.html?$">
+		AddType text/html .html .htm
+	</FilesMatch>
+
+	RemoveType .svg .svgz
+	<FilesMatch ".+\.svgz?$">
+		AddType image/svg+xml .svg .svgz
+	</FilesMatch>
 
 	# Data interchange
 	AddType application/atom+xml                        atom
@@ -191,8 +213,10 @@ AddEncoding gzip .gzip
 
 	AddType audio/mp4                                   f4a f4b m4a
 	AddType audio/ogg                                   oga ogg opus
+	AddType image/avif                                  avif
+	AddType image/avif-sequence                         avifs
 	AddType image/bmp                                   bmp
-	AddType image/svg+xml                               svg svgz
+	AddType image/jxl                                   jxl
 	AddType image/webp                                  webp
 	AddType video/mp4                                   f4v f4p m4v mp4
 	AddType video/ogg                                   ogv
@@ -201,11 +225,11 @@ AddEncoding gzip .gzip
 	AddType image/x-icon                                cur ico
 
 	# Web fonts
-	AddType application/font-woff                       woff
-	AddType application/font-woff2                      woff2
+	AddType font/woff                                   woff
+	AddType font/woff2                                  woff2
 	AddType application/vnd.ms-fontobject               eot
-	AddType application/x-font-ttf                      ttc ttf
-	AddType font/opentype                               otf
+	AddType font/ttf                                    ttc ttf
+	AddType font/otf                                    otf
 
 	# Other
 	AddType application/octet-stream                    safariextz
@@ -282,8 +306,10 @@ AddDefaultCharset utf-8
 	# Rules to set ApplicationContext based on hostname
 	#RewriteCond %{HTTP_HOST} ^dev\.example\.com$
 	#RewriteRule .? - [E=TYPO3_CONTEXT:Development]
-	#RewriteCond %{HTTP_HOST} ^staging\.example\.de$
+	#RewriteCond %{HTTP_HOST} ^staging\.example\.com$
 	#RewriteRule .? - [E=TYPO3_CONTEXT:Production/Staging]
+	#RewriteCond %{HTTP_HOST} ^www\.example\.com$
+	#RewriteRule .? - [E=TYPO3_CONTEXT:Production]
 
 	# Rule for versioned static files, configured through:
 	# - $GLOBALS['TYPO3_CONF_VARS']['BE']['versionNumberInFilename']
@@ -296,7 +322,7 @@ AddDefaultCharset utf-8
 	# Access block for folders
 	RewriteRule _(?:recycler|temp)_/ - [F]
 	RewriteRule fileadmin/templates/.*\.(?:txt|ts)$ - [F]
-	RewriteRule ^(?:vendor|typo3_src|typo3temp/logs) - [F]
+	RewriteRule ^(?:vendor|typo3_src|typo3temp/var) - [F]
 	RewriteRule (?:typo3conf/ext|typo3/sysext|typo3/ext)/[^/]+/(?:Configuration|Resources/Private|Tests?|Documentation|docs?)/ - [F]
 
 	# Block access to all hidden files and directories with the exception of
@@ -306,9 +332,15 @@ AddDefaultCharset utf-8
 	RewriteCond %{SCRIPT_FILENAME} -f
 	RewriteRule (?:^|/)\. - [F]
 
-	# Stop rewrite processing, if we are in the typo3/ directory or any other known directory
+	# Stop rewrite processing, if we are in any other known directory
 	# NOTE: Add your additional local storages here
-	RewriteRule ^(?:typo3/|fileadmin/|typo3conf/|typo3temp/|uploads/|favicon\.ico) - [L]
+	RewriteRule ^(?:fileadmin/|typo3conf/|typo3temp/|uploads/) - [L]
+
+	# If the file/symlink/directory does not exist but is below /typo3/, redirect to the TYPO3 Backend entry point.
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-l
+	RewriteRule ^typo3/(.*)$ %{ENV:CWD}typo3/index.php [QSA,L]
 
 	# If the file/symlink/directory does not exist => Redirect to index.php.
 	# For httpd.conf, you need to prefix each '%{REQUEST_FILENAME}' with '%{DOCUMENT_ROOT}'.
@@ -320,19 +352,20 @@ AddDefaultCharset utf-8
 </IfModule>
 
 # Access block for files
-<FilesMatch "(?i:^\.|^#.*#|^(?:ChangeLog|ToDo|Readme|License)(?:\.md|\.txt)?|^composer\.(?:json|lock)|^ext_conf_template\.txt|^ext_typoscript_constants\.txt|^ext_typoscript_setup\.txt|flexform[^.]*\.xml|locallang[^.]*\.(?:xml|xlf)|\.(?:bak|co?nf|cfg|ya?ml|ts|dist|fla|in[ci]|log|sh|sql(?:\..*)?|sw[op]|git.*)|.*(?:~|rc))$">
-	# Apache < 2.3
-	<IfModule !mod_authz_core.c>
+# Apache < 2.3
+<IfModule !mod_authz_core.c>
+	<FilesMatch "(?i:^\.|^#.*#|^(?:ChangeLog|ToDo|Readme|License)(?:\.md|\.txt)?|^composer\.(?:json|lock)|^ext_conf_template\.txt|^ext_typoscript_constants\.txt|^ext_typoscript_setup\.txt|flexform[^.]*\.xml|locallang[^.]*\.(?:xml|xlf)|\.(?:bak|co?nf|cfg|ya?ml|ts|typoscript|tsconfig|dist|fla|in[ci]|log|sh|sql(?:\..*)?|sqlite(?:\..*)?|sw[op]|git.*|rc)|.*~)$">
 		Order allow,deny
 		Deny from all
 		Satisfy All
-	</IfModule>
-
-	# Apache ≥ 2.3
-	<IfModule mod_authz_core.c>
+	</FilesMatch>
+</IfModule>
+# Apache ≥ 2.3
+<IfModule mod_authz_core.c>
+	<If "%{REQUEST_URI} =~ m#(?i:/\.|/\x23.*\x23|/(?:ChangeLog|ToDo|Readme|License)(?:\.md|\.txt)?|/composer\.(?:json|lock)|/ext_conf_template\.txt|/ext_typoscript_constants\.txt|/ext_typoscript_setup\.txt|flexform[^.]*\.xml|locallang[^.]*\.(?:xml|xlf)|\.(?:bak|co?nf|cfg|ya?ml|ts|typoscript|tsconfig|dist|fla|in[ci]|log|sh|sql(?:\..*)?|sqlite(?:\..*)?|sw[op]|git.*|rc)|.*~)$#">
 		Require all denied
-	</IfModule>
-</FilesMatch>
+	</If>
+</IfModule>
 
 # Block access to vcs directories
 <IfModule mod_alias.c>
