--- a/app/backend/.env.dist
+++ b/app/backend/.env.dist
@@ -27,7 +27,7 @@ TYPO3_BE_WARNING_EMAIL_ADDR=""
 TYPO3_BE_WARNING_MODE=""
 
 # Gfx
-TYPO3_GFX_PROCESSOR="GraphicsMagick"
+TYPO3_GFX_PROCESSOR="ImageMagick"
 TYPO3_GFX_PROCESSOR_PATH="/usr/bin/"
 TYPO3_GFX_PROCESSOR_PATH_LZW="/usr/bin/"
 TYPO3_GFX_PROCESSOR_COLORSPACE="sRGB"
