--- a/app/backend/packages/starter/composer.json
+++ b/app/backend/packages/starter/composer.json
@@ -24,6 +24,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "3.x-dev"
+        },
         "typo3/cms": {
             "extension-key": "starter"
         }
