--- a/app/backend/packages/starter_nessa/composer.json
+++ b/app/backend/packages/starter_nessa/composer.json
@@ -27,6 +27,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "3.x-dev"
+        },
         "typo3/cms": {
             "extension-key": "starter_nessa"
         }
