--- a/app/backend/packages/starter_twig/composer.json
+++ b/app/backend/packages/starter_twig/composer.json
@@ -21,6 +21,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "3.x-dev"
+        },
         "typo3/cms": {
             "extension-key": "starter_twig"
         }
