--- a/app/backend/packages/starter/composer.json
+++ b/app/backend/packages/starter/composer.json
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-			"dev-3.x": "3.x-dev"
+			"dev-main": "4.x-dev"
         },
         "typo3/cms": {
             "extension-key": "starter"
