--- a/app/backend/packages/starter_nessa/composer.json
+++ b/app/backend/packages/starter_nessa/composer.json
@@ -28,7 +28,7 @@
     },
     "extra": {
         "branch-alias": {
-			"dev-3.x": "3.x-dev"
+			"dev-main": "4.x-dev"
         },
         "typo3/cms": {
             "extension-key": "starter_nessa"
