--- a/app/backend/packages/starter_freya/frontend/package.json
+++ b/app/backend/packages/starter_freya/frontend/package.json
@@ -16,7 +16,8 @@
 		"build:webpack": "cross-env NODE_ENV=production webpack --config config/webpack.production.js",
 		"build:fractal": "fractal build",
 		"build:icons": "node ./config/compiler/icons.js",
-		"preview:build": "npx http-server build/prototype",
+		"preview:fractal": "npx http-server build/prototype",
+		"preview:bundle": "npx http-server build/static",
 		"lint": "npm run lint:js && npm run lint:css",
 		"lint:js": "eslint . --fix",
 		"lint:css": "stylelint \"./src/**/*.scss\" --fix --config .stylelintrc.js --ignore-path .stylelintignore",
@@ -25,57 +26,58 @@
 	"dependencies": {
 		"bootstrap": "^5.1.3",
 		"lazysizes": "^5.3.2",
-		"swiper": "^6.8.4"
+		"swiper": "^8.0.6"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.16.5",
-		"@babel/eslint-parser": "^7.16.0",
+		"@babel/core": "^7.17.5",
+		"@babel/eslint-parser": "^7.17.0",
 		"@babel/plugin-proposal-class-properties": "^7.16.0",
 		"@babel/preset-env": "^7.16.7",
 		"@babel/register": "^7.16.7",
-		"@frctl/fractal": "^1.5",
+		"@frctl/fractal": "^1.5.13",
 		"@frctl/twig": "^1.2",
 		"assign-deep": "^1.0.1",
 		"autoprefixer": "^10.4.0",
 		"babel-loader": "^8.2.3",
-		"babel-plugin-module-resolve": "^0.0.12",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"clean-webpack-plugin": "^4.0.0",
 		"cli-color": "^2.0.1",
 		"concurrently": "^7.0.0",
-		"copy-webpack-plugin": "^9.0.1",
+		"copy-webpack-plugin": "^10.2.4",
 		"cross-env": "^7.0.3",
-		"css-loader": "^6.5.0",
+		"css-loader": "^6.6.0",
 		"css-minimizer-webpack-plugin": "^3.1.1",
 		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-prettier": "^8.4.0",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-import-resolver-webpack": "^0.13.2",
-		"eslint-loader": "^4.0.2",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.2.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-webpack-plugin": "^3.1.1",
 		"mini-css-extract-plugin": "^2.4.3",
 		"postcss-import": "^14.0.2",
 		"postcss-loader": "^6.2.0",
-		"postcss-preset-env": "^6.7.0",
+		"postcss-preset-env": "^7.4.1",
 		"prettier": "^2.4.1",
 		"rimraf": "^3.0.2",
-		"sass": "^1.45.2",
-		"sass-loader": "^12.3.0",
+		"sass": "^1.49.8",
+		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
-		"stylelint": "^14.0.1",
+		"stylelint": "^14.5.2",
 		"stylelint-config-idiomatic-css": "^1.1.0",
 		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-standard": "^23.0.0",
-		"stylelint-config-standard-scss": "^2.0.0",
+		"stylelint-config-standard": "^25.0.0",
+		"stylelint-config-standard-scss": "^3.0.0",
 		"stylelint-order": "^5.0.0",
+		"stylelint-webpack-plugin": "^3.1.1",
 		"svgstore": "^3.0.1",
-		"terser-webpack-plugin": "^5.2.4",
-		"webpack": "^5.61.0",
+		"terser-webpack-plugin": "^5.3.1",
+		"webpack": "^5.69.1",
 		"webpack-build-notifier": "^2.3.0",
+		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^ 4.9.1",
 		"webpack-config-utils": "^2.3.1",
 		"webpack-manifest-plugin": "^4.0.2",
