--- a/app/backend/packages/sitepackage_nessa/composer.json
+++ b/app/backend/packages/sitepackage_nessa/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": "^7.4",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "^3.2",
-        "starterteam/starter-nessa": "^3.2"
+        "starterteam/starter": "dev-main",
+        "starterteam/starter-nessa": "dev-main"
     },
     "extra": {
         "typo3/cms": {
