[TASK] Integrate basic demo data

--- a/app/backend/.env.dist
+++ b/app/backend/.env.dist
@@ -34,7 +34,7 @@ TYPO3_GFX_PROCESSOR_COLORSPACE="sRGB"
 
 # System
 TYPO3_BASEURL_MAIN="https://starter-base.ddev.site/"
-#TYPO3_BASEURL_OTHER=""
+TYPO3_BASEURL_NESSA="https://nessa.ddev.site/"
 TYPO3_SYS_TRUSTED_HOST_PATTERN=".*\.ddev\.site"
 TYPO3_BE_COOKIEDOMAIN=".ddev.site"
 # Set this value from "true" to "0" if no SSL is available
