--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -6,7 +6,8 @@ webserver_type: apache-fpm
 router_http_port: "80"
 router_https_port: "443"
 xdebug_enabled: false
-additional_hostnames: []
+additional_hostnames:
+  - nessa
 additional_fqdns: []
 mariadb_version: "10.2"
 mysql_version: ""
