[TASK] Make basic extension configuration

--- a/app/backend/packages/starter_freya/.gitignore
+++ b/app/backend/packages/starter_freya/.gitignore
@@ -40,3 +40,9 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+# TYPO3
+/Resources/Private
+!/Resources/Private/.gitkeep
+/Resources/Public
+!/Resources/Public/.gitkeep
