--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -8,6 +8,7 @@ router_https_port: "443"
 xdebug_enabled: false
 additional_hostnames:
   - nessa
+  - freya
 additional_fqdns: []
 mariadb_version: "10.2"
 mysql_version: ""
