[!!!][FEATURE][#76] Optionen für die Sichtbarkeit von Inhaltselementen definiert

--- a/app/backend/packages/starter_freya/.gitignore
+++ b/app/backend/packages/starter_freya/.gitignore
@@ -42,7 +42,6 @@ yarn-error.log*
 *.sw*
 
 # TYPO3
-/Resources/Private
-!/Resources/Private/.gitkeep
+/Resources/Private/Frontend
 /Resources/Public
 !/Resources/Public/.gitkeep
