--- a/project-templates/app/backend/composer.json
+++ b/project-templates/app/backend/composer.json
@@ -31,10 +31,12 @@
 		"allow-plugins": {
 			"typo3/class-alias-loader": true,
 			"typo3/cms-composer-installers": true,
-			"helhum/dotenv-connector": true
+			"helhum/dotenv-connector": true,
+			"cweagans/composer-patches": true
 		}
 	},
 	"require": {
+		"cweagans/composer-patches": "^1.7",
 		"helhum/dotenv-connector": "^3.0",
 		"helhum/typo3-console": "^7.0",
 		"pti/pti": "dev-feature/support_t3v11",
@@ -75,5 +77,17 @@
 		"post-install-cmd": [
 			"ln -sf vendor/helhum/typo3-console/typo3cms typo3cms"
 		]
+	},
+	"extra": {
+		"typo3/cms": {
+			"cms-package-dir": "{$vendor-dir}/typo3/cms"
+		},
+		"enable-patching": true,
+		"composer-exit-on-patch-failure": true,
+		"patches": {
+			"pti/pti": {
+				"Prepend site base uri to assets": "patches/pti_prepend_site_uri_assets.patch"
+			}
+		}
 	}
 }
