--- a/app/backend/packages/sitepackage_freya/composer.json
+++ b/app/backend/packages/sitepackage_freya/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": "^7.4",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "dev-main",
-        "starterteam/starter-freya": "dev-main"
+        "starterteam/starter": "^4.0",
+        "starterteam/starter-freya": "^4.0"
     },
     "extra": {
         "typo3/cms": {
