[TASK][DEVOPS] Update DDEV auf Version 1.21.1

--- a/.ddev/docker-compose.override-web.yaml
+++ b/.ddev/docker-compose.override-web.yaml
@@ -5,3 +5,4 @@ services:
     ports:
       - 3000 # needed for frontend tool fractal
       - 3002 # needed for browserSync
+    platform: linux/amd64
