[BUGFIX][DEVOPS] Fix composer installation

--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -25,8 +25,8 @@
         "helhum/dotenv-connector": "^3.0",
         "helhum/typo3-console": "^7.0",
         "ichhabrecht/content-defender": "^3.2",
-        "starterteam/site-package-freya": "@dev",
-        "starterteam/site-package-nessa": "@dev",
+        "starterteam/site-package-freya": "dev-main",
+        "starterteam/site-package-nessa": "dev-main",
         "symfony/dotenv": "^5.2",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
