[FEATURE] Add extension to migration content elements

--- a/.build/ci/templates/monorepoSplitTemplate.yml
+++ b/.build/ci/templates/monorepoSplitTemplate.yml
@@ -9,6 +9,8 @@
         SPLIT_REPOSITORY: "team/starter"
       - LOCAL_PATH: "app/backend/packages/starter_freya"
         SPLIT_REPOSITORY: "team/starter-freya"
+      - LOCAL_PATH: "app/backend/packages/starter_migration"
+        SPLIT_REPOSITORY: "team/starter-migration"
       - LOCAL_PATH: "app/backend/packages/starter_nessa"
         SPLIT_REPOSITORY: "team/starter-nessa"
       - LOCAL_PATH: "app/backend/packages/starter_twig"
