--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -27,6 +27,7 @@
         "ichhabrecht/content-defender": "^3.2",
         "starterteam/site-package-freya": "dev-main",
         "starterteam/site-package-nessa": "dev-main",
+        "starterteam/starter-migration": "dev-main",
         "symfony/dotenv": "^5.2",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
@@ -65,11 +66,17 @@
     "autoload": {
         "psr-4": {
             "StarterTeam\\StarterFreya\\": "packages/starter_freya/Classes",
-            "StarterTeam\\StarterNessa\\": "packages/starter_nessa/Classes",
+			"StarterTeam\\StarterMigration\\": "packages/starter_migration/Classes",
+			"StarterTeam\\StarterNessa\\": "packages/starter_nessa/Classes",
             "StarterTeam\\StarterTwig\\": "packages/starter_twig/Classes",
             "StarterTeam\\Starter\\": "packages/starter/Classes"
         }
     },
+	"autoload-dev": {
+		"psr-4": {
+			"StarterTeam\\StarterMigration\\Tests\\": "packages/starter_migration/Tests"
+		}
+	},
     "repositories": [
         {
             "type": "path",
