--- a/project-templates/app/backend/composer.json
+++ b/project-templates/app/backend/composer.json
@@ -71,9 +71,17 @@
 	},
 	"require-dev": {
 		"ssch/typo3-rector": "^1.1",
-		"typo3/coding-standards": "^0.5.0"
+		"typo3/coding-standards": "^0.6.1"
 	},
 	"scripts": {
+		"ci:php:cs": [
+			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --dry-run --using-cache no --diff",
+			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer-nonclasses.php -v --dry-run --using-cache no --diff"
+		],
+		"ci:php:cs-fix": [
+			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --using-cache no",
+			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer-nonclasses.php -v --using-cache no"
+		],
 		"ci:php:rector": [
 			"rector process --dry-run --clear-cache --config=../../.build/tools/rector.php"
 		],
