[TASK] Integrate PHPStan in CI and fix code issues

--- a/.build/ci/linting-backend.yml
+++ b/.build/ci/linting-backend.yml
@@ -29,6 +29,16 @@ backend:phpCsFixer:
     - composer run ci:php:cs -d app/backend
 
 ###
+# PHPStan finds bugs in your code without writing tests
+# see https://phpstan.org/
+###
+backend:phpStan:
+  extends: .backend-linting
+  script:
+    - composer install -d app/backend
+    - composer run ci:php:stan -d app/backend
+
+###
 # PHP syntax check
 # see https://github.com/php-parallel-lint/PHP-Parallel-Lint
 ###
