--- a/project-templates/app/backend/composer.json
+++ b/project-templates/app/backend/composer.json
@@ -32,7 +32,8 @@
 			"typo3/class-alias-loader": true,
 			"typo3/cms-composer-installers": true,
 			"helhum/dotenv-connector": true,
-			"cweagans/composer-patches": true
+			"cweagans/composer-patches": true,
+			"phpstan/extension-installer": true
 		}
 	},
 	"require": {
@@ -70,6 +71,9 @@
 		"typo3/cms-viewpage": "^11.5"
 	},
 	"require-dev": {
+		"phpstan/extension-installer": "^1.2",
+		"phpstan/phpstan": "^1.9",
+		"saschaegerer/phpstan-typo3": "^1.8",
 		"ssch/typo3-rector": "^1.1",
 		"typo3/coding-standards": "^0.6.1"
 	},
@@ -81,6 +85,12 @@
 		"ci:php:cs-fix": [
 			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --using-cache no",
 			"php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer-nonclasses.php -v --using-cache no"
+		],
+		"ci:php:stan": [
+			"phpstan --configuration=../../.build/tools/phpstan.neon"
+		],
+		"ci:php:phpstan-baseline": [
+			"phpstan --configuration=../../.build/tools/phpstan.neon --generate-baseline=../../.build/tools/phpstan-baseline.neon"
 		],
 		"ci:php:rector": [
 			"rector process --dry-run --clear-cache --config=../../.build/tools/rector.php"
