[TASK][DEVOPS] Rename CI job "rector" to "backend:rector"

--- a/.build/ci/linting-backend.yml
+++ b/.build/ci/linting-backend.yml
@@ -12,7 +12,7 @@ stages:
 ###
 # Rector with PHP and TYPO3 rules
 ###
-rector:
+backend:rector:
   extends: .backend-linting
   script:
     - composer install -d app/backend
