--- a/.build/ci/templates/monorepoSplitTemplate.yml
+++ b/.build/ci/templates/monorepoSplitTemplate.yml
@@ -13,6 +13,8 @@
         SPLIT_REPOSITORY: "team/starter-nessa"
       - LOCAL_PATH: "app/backend/packages/starter_twig"
         SPLIT_REPOSITORY: "team/starter-twig"
+      - LOCAL_PATH: "app/backend/packages/starter_twig_news"
+        SPLIT_REPOSITORY: "team/starter-twig-news"
   variables:
     GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
     PACKAGE_DIRECTORY: $LOCAL_PATH
