--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -27,6 +27,7 @@
         "ichhabrecht/content-defender": "^3.2",
         "starterteam/site-package-freya": "dev-main",
         "starterteam/site-package-nessa": "dev-main",
+        "starterteam/starter-twig-news": "4.x-dev",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
         "typo3/cms-belog": "^11.5",
@@ -94,7 +95,8 @@
 		"composer-exit-on-patch-failure": true,
 		"patches": {
 			"pti/pti": {
-				"Prepend site base uri to assets": "patches/pti_prepend_site_uri_assets.patch"
+				"Prepend site base uri to assets": "patches/pti/pti_prepend_site_uri_assets.patch",
+				"Fix allowed data type for image processing": "patches/pti/data_types_image_processing.patch"
 			}
 		}
     },
