--- a/app/backend/packages/starter_twig_news/composer.json
+++ b/app/backend/packages/starter_twig_news/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "starterteam/starter-twig",
+    "name": "starterteam/starter-twig-news",
     "type": "typo3-cms-extension",
-    "description": "TYPO3 data processing to handle twig templates",
+    "description": "TYPO3 data processing to handle twig templates for EXT:news",
     "license": "proprietary",
     "authors": [
         {
@@ -10,18 +10,14 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "pti/pti": "dev-feature/support_t3v11",
-        "twig/twig": "^3",
+		"georgringer/news": "^9.4",
+		"php": "^7.4",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "dev-main"
+        "starterteam/starter-twig": "4.x-dev"
     },
-	"suggest": {
-		"starterteam/starter-twig-news": "4.x-dev"
-	},
 	"autoload": {
         "psr-4": {
-            "StarterTeam\\StarterTwig\\": "Classes"
+            "StarterTeam\\StarterTwigNews\\": "Classes"
         }
     },
     "extra": {
@@ -29,7 +25,7 @@
             "dev-main": "4.x-dev"
         },
         "typo3/cms": {
-            "extension-key": "starter_twig"
+            "extension-key": "starter_twig_news"
         }
     }
 }
