--- a/.build/ci/container-build.yml
+++ b/.build/ci/container-build.yml
@@ -1,14 +1,34 @@
-include:
-  - local: '/.build/ci/templates/containerTemplate.yml'
+.build-container:
+  stage: devops-build
+  image: docker:19.03.12
+  services:
+    - docker:19.03.12-dind
+  variables:
+    PHP_VERSION: '7.4'
+    ALPINE_VERSION: '3.12'
+    COMPOSER_VERSION: '2'
+    NODE_VERSION: '14.15.1'
+    SURF_VERSION: '2.3'
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker build -t $DOCKER_IMAGE_TAG $DOCKER_IMAGE_PATH
+    - docker push $DOCKER_IMAGE_TAG
 
 stages:
   - devops-build
 
 ##
-# Job to build a docker container for generell backend linting
+# Job to build a docker container for general backend linting
 ##
 build:backend-lint-container:
-  extends: .build-container:template
+  extends: .build-container
   variables:
-    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:backend
+    PHP_VERSION: '8.1'
+    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:backend-$PHP_VERSION
+    DOCKER_IMAGE_PATH: ./.build/docker/lint-backend/
+
+build:backend-lint-container74:
+  extends: .build-container
+  variables:
+    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:backend-$PHP_VERSION
     DOCKER_IMAGE_PATH: ./.build/docker/lint-backend/
