--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -4,7 +4,7 @@
     "description": "StarterTeam basic sitepackage extension",
     "license": "proprietary",
     "require": {
-        "php": "^7.4",
+		"php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
         "starterteam/starter": "dev-main"
     },
