--- a/app/backend/packages/sitepackage_freya/composer.json
+++ b/app/backend/packages/sitepackage_freya/composer.json
@@ -4,7 +4,7 @@
     "description": "StarterTeam sitepackage demo extension for EXT:starter-freya",
     "license": "proprietary",
     "require": {
-        "php": "^7.4",
+		"php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
         "starterteam/starter": "dev-main",
         "starterteam/starter-freya": "dev-main"
