--- a/app/backend/packages/starter_twig_news/composer.json
+++ b/app/backend/packages/starter_twig_news/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
 		"georgringer/news": "^9.4",
-		"php": "^7.4",
+		"php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
         "starterteam/starter-twig": "4.x-dev"
     },
