[TASK] Zulässige Versionen von EXT:starter* Erweiterungen aktualisiert

--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -25,9 +25,9 @@
         "helhum/dotenv-connector": "^3.0",
         "helhum/typo3-console": "^7.1",
         "ichhabrecht/content-defender": "^3.2",
-        "starterteam/site-package-freya": "dev-main",
-        "starterteam/site-package-nessa": "dev-main",
-        "starterteam/starter-twig-news": "4.x-dev",
+        "starterteam/site-package-freya": "^4.1 || 4.x-dev",
+        "starterteam/site-package-nessa": "^4.1 || 4.x-dev",
+        "starterteam/starter-twig-news": "^4.1 || 4.x-dev",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
         "typo3/cms-belog": "^11.5",
