--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -27,7 +27,7 @@
         "ichhabrecht/content-defender": "^3.2",
         "starterteam/site-package-freya": "dev-main",
         "starterteam/site-package-nessa": "dev-main",
-        "starterteam/starter-twig-news": "4.x-dev",
+        "starterteam/starter-twig-news": "dev-main",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
         "typo3/cms-belog": "^11.5",
