--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -4,13 +4,13 @@
     "description": "StarterTeam basic sitepackage extension",
     "license": "proprietary",
     "require": {
-		"php": "^7.4 || ^8.1",
+        "php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "dev-main"
+        "starterteam/starter": "^4.0 || 4.1-dev"
     },
     "suggest": {
-        "starterteam/starter-twig": "^3.0",
-        "starterteam/starter-nessa": "^3.0"
+        "starterteam/starter-twig": "^4.0 || 4.1-dev",
+        "starterteam/starter-nessa": "^4.0 || 4.1-dev"
     },
     "extra": {
         "typo3/cms": {
