--- a/app/backend/packages/sitepackage_freya/composer.json
+++ b/app/backend/packages/sitepackage_freya/composer.json
@@ -4,10 +4,10 @@
     "description": "StarterTeam sitepackage demo extension for EXT:starter-freya",
     "license": "proprietary",
     "require": {
-		"php": "^7.4 || ^8.1",
+        "php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "dev-main",
-        "starterteam/starter-freya": "dev-main"
+        "starterteam/starter": "^4.0 || 4.1-dev",
+        "starterteam/starter-freya": "^4.0 || 4.1-dev"
     },
     "extra": {
         "typo3/cms": {
